# DFL-for-Shortest-Path-Network-Interdiction

./: .gitignore  LinearRegression.py  Main.ipynb  README.md  ShortestPath.py  ShortestPathGrid.py  TODOs.txt  pyproject.toml  requirements.txt  setup.py  trainer.py  visualize_grid.py
Notebooks/: 1_PyEPO_Integration.ipynb  2_Benders_Decomposition.ipynb  3_Bayrak08.ipynb  5_Asym_SPNI_Toy_Example.ipynb  7_Asym_SPNI.ipynb  8_Equilibrium_Computer.ipynb  9_real_world_example.ipynb  Asym_SPNI.ipynb  Asym_SPNI_PO.ipynb  Bayrak08.ipynb  Benders_Decomposition.ipynb  Equilibrium_Computer.ipynb  Game_A.ipynb  Main.ipynb  Main_PyEPO.ipynb  Robust_SPO.ipynb  Testing_SPNI_Asym.ipynb  real_world_SPNI_data_import.ipynb
src/: Main.py
src/Notebooks/: Asym_SPNI.ipynb  Asym_SPNI_PO.ipynb  Asym_SPNI_Toy_Example.ipynb  Bayrak08.ipynb  Benders_Decomposition.ipynb  Game_A.ipynb  Main.ipynb  Main_PyEPO.ipynb  Robust_SPO.ipynb  Testing_SPNI_Asym.ipynb
src/data/: AdvDataset.py  AdvLoader.py  AdvRandomSampler.py  AdverseDataGenerator.py  DataGenerator.py  InversePolynomialFeatureMap.py  PolynomialKernelFeatureMap.py  __init__.py  config.py
src/deprecated/: CalibrationTrainer.py
src/dflintdpy/: __main__.py  main.py
src/models/: CalibratedPredictor.py  CalibratedSPOTrainer.py  HybridSPOLoss.py  HybridSPOTrainer.py  LinearRegression.py  POTrainer.py  SPOTrainer.py  ShortestPath.py  ShortestPathGrb.py  ShortestPathGrid.py  __init__.py  trainer.py
src/scripts/: Asym_SPNI_Simulator.py  bayrak08.py  (+2 more)
tests/: test_arcs_one_hot.py  test_calibrated_predictor.py  test_calibrated_trainer.py
(+44 files in other folders)
