[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DFLIntdPy"
version = "0.1.0"
description = "Decision-Focused Learning for network interdiction: graphs, models, solvers, and tooling."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Luca Hartmann" }]

# Keep core deps light; put heavy ones into extras
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "networkx>=3.2",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
gurobi = ["gurobipy>=11.0"]
plot = ["matplotlib>=3.8"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "pytest-cov>=5"]

# If you want a CLI command `dflintd`:
[project.scripts]
dflintd = "dflintdpy.cli.__main__:main"

[project.urls]
Homepage = "https://example.com/DFLIntdPy"
Repository = "https://example.com/DFLIntdPy.git"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# If you ship non-.py assets later:
# [tool.setuptools.package-data]
# dflintdpy = ["resources/*.json", "templates/*.jinja"]

# Optional: if you plan for external solver plugins in future, you’ll
# read them via entry_points(group="dflintdpy.solver") at runtime.
# Third-party dists would register themselves under that group.
